# AstroAI

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: schemas.py
app/services/: agent.py  memory.py  rag.py
data/: career_guidance.txt  love_guidance.txt  nakshatra_mapping.json  planetary_impacts.json  planetary_traits.json  spiritual_guidance.txt  vedic_astrology.txt  zodiac_personality.json  zodiac_traits.json
scripts/: ingest.py
